# agent-sequencer-app

./: README.md  pyproject.toml  requirements.txt  run_platform.bat
docker/: README.md
src/comms_platform/: agent_coordinator.py  config.py  inference_worker.py  main.py  master_agent.py  perception_engine.py  td_sender.py  thread_manager.py
src/comms_platform/utils/: logger.py
src/comms_platform/web/: app.py
src/comms_platform/web/static/: index.html  main.js  styles.css
tests/: README.md  test_api.py
touchdesigner/: README.md  example1.toe  python1.py
