[project]

name = "comms-platform"
description = "Professional multimodal communications platform for agent orchestration"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# uv-specific config can go here if needed
